메인구조잡기 완료

--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -6,11 +6,16 @@
         android:enabled="true"
         android:icon="@mipmap/ic_launcher"
         android:title="home"
-        app:showAsAction="withText" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_subscribe"
         android:icon="@mipmap/ic_launcher"
         android:title="subscribe"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_request"
+        android:icon="@mipmap/ic_launcher"
+        android:title="request"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_library"
