--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <android.support.v7.widget.Toolbar
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/campus_toolbar"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="#00FFFFFF"
+        android:layout_gravity="top"
+        android:elevation="4dp">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:id="@+id/campus_image_drawer"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:tint="#FFFFFF" />
+
+        </FrameLayout>
+    </android.support.v7.widget.Toolbar>
+
     <!-- 생략 -->
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
@@ -18,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_gravity="bottom"
-        app:itemBackground="@color/bottomColor"
+        app:itemBackground="@color/bottomTintColor"
         app:itemIconTint="@color/bottomColor"
         app:itemTextColor="@color/bottomColor"
         app:menu="@menu/bottom_navigation_main" />
