--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,11 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/campus_image_drawer"
                 android:layout_width="48dp"
                 android:layout_height="match_parent"
-                android:id="@+id/campus_image_drawer"
                 android:layout_gravity="center_vertical"
+                android:layout_marginTop="48dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:tint="#FFFFFF" />
@@ -38,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
+        android:layout_marginTop="48dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.BottomNavigationView
