--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,15 +58,25 @@
         android:layout_marginBottom="56dp"
         android:layout_marginTop="87dp"
         android:background="#FFFFFF"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+    </android.support.v4.view.ViewPager>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="56dp"
+        android:background="#E1E1E1" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/main_bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_gravity="bottom"
-        app:itemBackground="@color/bottomTintColor"
-        app:itemIconTint="@color/bottomColor"
-        app:itemTextColor="@color/bottomColor"
+        app:itemBackground="@android:color/white"
+        app:itemIconTint="@drawable/bottom_navigation_colors"
+        app:itemTextColor="@drawable/bottom_navigation_colors"
         app:menu="@menu/bottom_navigation_main" />
 </android.support.design.widget.CoordinatorLayout>
