--- a/app/src/main/res/layout/fragment_now_trend.xml
+++ b/app/src/main/res/layout/fragment_now_trend.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cow.bridge.home.activity.type.OtherFragment">
+    tools:context="com.cow.bridge.home.activity.type.hot.NowTrendFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:text="BTS Earns First No. 1 Album on Billboard 200 Chart"
+        android:textSize="15dp" />
 
 </FrameLayout>
