--- a/app/src/main/res/layout/row_contents_vertical_simple.xml
+++ b/app/src/main/res/layout/row_contents_vertical_simple.xml
@@ -4,6 +4,7 @@
     android:id="@+id/contents_layout_main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:orientation="vertical">
