--- a/app/src/main/res/layout/video_contents_video_layout_manager.xml
+++ b/app/src/main/res/layout/video_contents_video_layout_manager.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:layout_width="139dp"
+            android:layout_height="147dp">
+
+            <ImageView
+                android:id="@+id/video"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_launcher" />
+
+            <ImageView
+                android:id="@+id/video_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/video_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:text="00:00" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="blabla" />
+
+            <TextView
+                android:id="@+id/hash"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="lalalalalalala" />
+        </LinearLayout>
+    </GridLayout>
+</LinearLayout>
