--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
 
     <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/campus_toolbar"
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="87dp"
         android:layout_gravity="top"
@@ -37,7 +37,7 @@
                 app:srcCompat="@drawable/home_logo_only_icon" />
 
             <Button
-                android:id="@+id/campus_image_drawer"
+                android:id="@+id/main_button_login"
                 android:layout_width="56dp"
                 android:layout_height="28dp"
                 android:layout_gravity="center_vertical"
