--- a/app/src/main/res/layout/mypage_activity.xml
+++ b/app/src/main/res/layout/mypage_activity.xml
@@ -1,19 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<Toolbar
-    android:id="@+id/mypage_toolbar"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:background="#000000"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="#ffffff">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/mypage_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" >
+
+            <ImageButton
+                android:id="@+id/back_btn"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/back_btn"
+                android:background="#ffffff"
+                android:layout_gravity="left"
+                android:layout_marginLeft="15dp"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MY PAGE"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_gravity="center_horizontal"
+                />
+            <ImageButton
+                android:id="@+id/mypage_out_btn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/mypage_out_btn"
+                android:background="#ffffff"
+                android:layout_gravity="right"
+                android:layout_marginRight="15dp"
+                android:layout_centerVertical="true"/>
+
+        </android.support.v7.widget.Toolbar>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_below="@+id/mypage_toolbar">
+
+            <ImageView
+                android:layout_width="95dp"
+                android:layout_height="95dp"
+                android:src="@drawable/mypage_btn_small"
+                android:layout_centerInParent="true"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lee Hokyung"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="0dp"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:layout_marginBottom="15dp"
+                />
 
 
+        </RelativeLayout>
 
 
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:text="My Requests"
+        android:gravity="center"
+        android:textSize="13sp"
+        />
 
-</Toolbar>
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mypage_write"
+        >
+
+    </android.support.v7.widget.RecyclerView>
+</LinearLayout>
