--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:background="#FFFFFF">
 
             <ImageView
-                android:id="@+id/button"
+                android:id="@+id/main_image_search"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_gravity="right|center_vertical"
