--- a/app/src/main/res/layout/video_contents.xml
+++ b/app/src/main/res/layout/video_contents.xml
@@ -11,89 +11,140 @@
         <VideoView
             android:id="@+id/video_contents_vv_video"
             android:layout_width="wrap_content"
-            android:layout_height="78dp" />
+            android:layout_height="186.95dp" />
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="61.36dp"
+            android:layout_height="61.36dp"
             android:background="@drawable/play_inside_content_icon"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
+
         <Button
             android:id="@+id/video_contents_iv_video_cancel"
-            android:background="@drawable/content_x_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="17.79dp"
+            android:layout_height="17.79dp"
+            android:layout_marginLeft="18.25dp"
+            android:layout_marginTop="18.25dp"
+            android:background="@drawable/content_x_btn" />
     </FrameLayout>
+    //1
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            //2
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingTop="13dp"
+                android:paddingLeft="16dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/video_contents_tv_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="46.98dp"
+                    android:layout_alignParentLeft="true"
+                    android:textSize="18dp"
+                    android:textColor="#000407"
+                    android:text="Jsthis - One of them in university festival" />
+                <TextView
+                    android:id="@+id/video_contents_tv_credit"
+                    android:layout_width="match_parent"
+                    android:layout_height="27.8dp"
+                    android:layout_marginTop="8dp"
+                    android:textSize="13dp"
+                    android:textColor="#000407"
+                    android:text="credit : Youtube Indigo" />
+            </LinearLayout>
+            //3
+         <LinearLayout
+             android:layout_width="23.18dp"
+             android:layout_height="78.68dp"
+             android:layout_marginTop="16.6dp"
+             android:layout_marginRight="14.21dp"
+             android:layout_marginLeft="3.83dp"
+             android:orientation="vertical">
+            <Button
+                android:id="@+id/video_contents_bt_library"
+                android:layout_width="12dp"
+                android:layout_height="20dp"
+                android:layout_marginBottom="16.25dp"
+                android:layout_gravity="center"
+                android:background="@drawable/add_to_library_normal_icon" />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <Button
+                android:id="@+id/video_contents_bt_feedback"
+                android:layout_width="23.21dp"
+                android:layout_height="19.13dp"
+                android:layout_gravity="top"
+                android:background="@drawable/feedback_normal_icon" />
+         </LinearLayout>
+        </LinearLayout>
+        //4
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="27.8dp"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="5dp"
+                android:paddingRight="16.3dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/video_contents_tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_rowSpan="2"
-            android:text="lalalalallalal"/>
 
-        <Button
-            android:background="@drawable/add_to_library_normal_icon"
-            android:id="@+id/video_contents_bt_library"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:layout_gravity="right"/>
-        <Button
-            android:id="@+id/video_contents_bt_feedback"
-            android:background="@drawable/feedback_normal_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_gravity="right"/>
-        <TextView
-            android:id="@+id/video_contents_tv_hash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="2"
-            android:text="allalalallalalalal"/>
+                <TextView
+                android:id="@+id/video_contents_tv_hash"
+                android:layout_width="0dp"
+                android:layout_height="27.8dp"
+                    android:layout_weight="1"
+                android:textSize="12dp"
+                android:textColor="#B1B1B1"
+                android:textStyle="bold"
+                android:text="#Hiphop #J-this " />
 
-        <Button
-            android:id="@+id/video_contents_bt_recommend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:text="36"
-            android:drawableRight="@drawable/good_normal_btn"
-            android:layout_gravity="right"/>
-    </GridLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/video_contents_bt_recommend"
+                    android:layout_marginRight="10.89dp"
+                    android:textColor="#000000"
+                    android:textSize="13dp"
+                    android:text="36"/>
+
+                <Button
+                    android:id="@+id/video_contents_bt_recommend"
+                    android:layout_width="18.85dp"
+                    android:layout_height="19.41dp"
+                    android:background="@drawable/good_normal_btn" />
+
+
+
+    </LinearLayout>
+
     <TabHost
         android:id="@+id/host"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="36.43dp" />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+            <FrameLayout
+                android:id="@android:id/content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/video_contents_RecyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
             </FrameLayout>
 
         </LinearLayout>
