--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -123,7 +123,7 @@
     <com.cow.bridge.search.searchlibrary.MaterialSearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
     </com.cow.bridge.search.searchlibrary.MaterialSearchView>
 
