--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -87,6 +87,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/search_layout_orderby"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -97,7 +98,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/search_text_orderby"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -114,6 +115,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/search_recycler_result"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
