--- a/app/src/main/res/layout/row_recommend_subscribe_simple.xml
+++ b/app/src/main/res/layout/row_recommend_subscribe_simple.xml
@@ -15,14 +15,14 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_marginBottom="5dp"
-        app:srcCompat="@drawable/bottom_bar_home_active_icon" />
+        app:srcCompat="@drawable/home_video_thumnail_icon" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="#NU'EST"
+        android:text="#추천채널"
         android:textColor="#333333"
         android:textSize="10dp"
         android:textStyle="bold" />
