home 서버연동 완료

--- a/app/src/main/res/layout/row_contents_simple.xml
+++ b/app/src/main/res/layout/row_contents_simple.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/contents_layout_main"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
@@ -14,8 +15,8 @@
 
         <ImageView
             android:id="@+id/contents_image_thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="153dp"
+            android:layout_height="100dp"
             app:srcCompat="@drawable/home_logo_with_text_icon" />
 
         <ImageView
