--- a/app/src/main/res/layout/row_mypage_item.xml
+++ b/app/src/main/res/layout/row_mypage_item.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="62.4dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="62.4dp"
+    android:background="@drawable/button_rect_1dp_e1e1e1">
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="62.4dp"
-        android:orientation="vertical"
         android:layout_alignParentLeft="true"
-        >
+        android:orientation="vertical">
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/writing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="23.04dp"
-            android:layout_centerVertical="true"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="writing"
-            android:textSize="13dp"
-            android:textColor="#333333"/>
+            android:textColor="#333333"
+            android:textSize="13dp" />
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="23.04dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
             android:text="date"
+            android:textColor="#AEAEAE"
             android:textSize="11dp"
             android:textStyle="normal"
-            android:textColor="#AEAEAE"
 
             />
     </LinearLayout>
