검색 기능 구현 완료

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:background="#F5F5F5"
             android:minHeight="98dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/imageView3"
