--- a/app/src/main/res/layout/row_contents_search_simple.xml
+++ b/app/src/main/res/layout/row_contents_search_simple.xml
@@ -61,7 +61,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/contents_text_hash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="13dp"
