nowTrend 음영부분 수정

--- a/app/src/main/res/layout/fragment_now_trend.xml
+++ b/app/src/main/res/layout/fragment_now_trend.xml
@@ -12,6 +12,12 @@
         android:layout_height="wrap_content"
         android:src="@drawable/nuest4" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.5"
+        android:background="@drawable/add_gradation" />
+
     <TextView
         android:id="@+id/nowtrend_text_title"
         android:layout_width="wrap_content"
