라이브러리 메인, 상세페이지 구현 완료

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -54,7 +54,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/library_image_add"
                     android:layout_width="37dp"
                     android:layout_height="37dp"
                     android:padding="8dp"
