--- a/app/src/main/res/drawable/round_btn_done.xml
+++ b/app/src/main/res/drawable/round_btn_done.xml
@@ -2,9 +2,9 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <corners android:radius="15dp"/>
+        <corners android:radius="19dp"/>
         <stroke android:width="1dp"
-            android:color="#000000" />
-        <solid android:color="#000000"></solid>
+            android:color="#E31C9E" />
+        <solid android:color="#E31C9E"></solid>
 
     </shape>
