--- a/app/src/main/res/layout/fragment_image_comments.xml
+++ b/app/src/main/res/layout/fragment_image_comments.xml
@@ -75,18 +75,18 @@
                 android:textColor="#B1B1B1"
                 android:textSize="10dp" />
 
-            <Button
-                android:id="@+id/image_contents_btn_recomment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="17.21dp"
-                android:layout_marginTop="4.81dp"
-                android:background="#ffffff"
-                android:drawableLeft="@drawable/open_reply_page_icon"
-                android:text=" 120 Replies"
-                android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="10dp" />
+            <!--<Button-->
+                <!--android:id="@+id/image_contents_btn_recomment"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="17.21dp"-->
+                <!--android:layout_marginTop="4.81dp"-->
+                <!--android:background="#ffffff"-->
+                <!--android:drawableLeft="@drawable/open_reply_page_icon"-->
+                <!--android:text=" 120 Replies"-->
+                <!--android:textAllCaps="false"-->
+                <!--android:textColor="#000000"-->
+                <!--android:textSize="10dp" />-->
         </LinearLayout>
 
     </LinearLayout>
