--- a/app/src/main/res/layout/fragment_now_trend.xml
+++ b/app/src/main/res/layout/fragment_now_trend.xml
@@ -8,9 +8,8 @@
 
     <ImageView
         android:id="@+id/nowtrend_image_thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/nuest4" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <ImageView
         android:layout_width="match_parent"
