--- a/app/src/main/res/layout/activity_request_write.xml
+++ b/app/src/main/res/layout/activity_request_write.xml
@@ -99,7 +99,7 @@
                 android:layout_height="45dp"
                 android:layout_marginBottom="10dp"
                 android:background="#F7F7F7"
-                android:hint="제목을 입력해주세요"
+                android:hint="Enter a Title"
                 android:inputType="text"
                 android:paddingLeft="13dp"
                 android:paddingRight="13dp"
@@ -112,7 +112,7 @@
                 android:layout_height="45dp"
                 android:layout_marginBottom="10dp"
                 android:background="#F7F7F7"
-                android:hint="링크를 입력해주세요"
+                android:hint="Enter a Link"
                 android:inputType="text"
                 android:paddingLeft="13dp"
                 android:paddingRight="13dp"
@@ -125,7 +125,7 @@
                 android:layout_height="match_parent"
                 android:background="#F7F7F7"
                 android:gravity="top"
-                android:hint="내용을 입력해주세요"
+                android:hint="Enter a Content"
                 android:inputType="textMultiLine"
                 android:minLines="10"
                 android:padding="13dp"
