--- a/app/src/main/res/layout/row_contents_simple.xml
+++ b/app/src/main/res/layout/row_contents_simple.xml
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lines="2"
+        android:paddingRight="15dp"
         android:text="BTS - Anpanman fancam focus on Jungkuk"
         android:textColor="#000000"
         android:textSize="12dp" />
