--- a/app/src/main/res/layout/row_contents_vertical_simple.xml
+++ b/app/src/main/res/layout/row_contents_vertical_simple.xml
@@ -48,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lines="2"
+        android:paddingRight="15dp"
         android:text="[M/V] NU'EST W(뉴이스트 W) - Dejavu"
         android:textColor="#000000"
         android:textSize="12dp" />
